# autogis2020

./: LICENSE  README.md  pyproject.toml
autogis/exercise-1/: Exercise-1.md  Rust-exercise-1.ipynb
autogis/exercise-1/.ipynb_checkpoints/: Julia-exercise-1-checkpoint.ipynb  Python-exercise-1-checkpoint.ipynb
tests/: test_autogis.py
